--- a/crash-games-main/index.html
+++ b/crash-games-main/index.html
@@ -46,7 +46,7 @@
             &nbsp;
             <form class="d-flex">
               <input class="form-control me-sm-2" type="text" placeholder="Search">
-              <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+              <button class="btn btn-secondary my-2 my-sm-0" type="submit">Buscar</button>
             </form>
           </div>
         </div>
