--- a/crash-games-main/index.html
+++ b/crash-games-main/index.html
@@ -44,10 +44,6 @@
             </ul>
             <a href="#"><img src="img/shopping-cart.png" alt="cart1" style="max-width:45px; margin-right: auto;"></a>&nbsp;
             &nbsp;
-            <form class="d-flex">
-              <input class="form-control me-sm-2" type="search" name="buscarProducto" id="search" v-model="nombreProducto" placeholder="buscar..." >
-              <button class="btn btn-secondary my-2 my-sm-0" type="submit">Buscar</button>
-            </form>
           </div>
         </div>
       </nav>
@@ -82,6 +78,13 @@
    <h3>Chequea Nuestros Productos</h3>
    <br>
    <main id="app">
+    <br>
+    <form class="row">
+      <input class="form-control me-sm-2" type="search" name="buscarProducto" id="search" v-model="nombreProducto" placeholder="buscar..." >
+      <button class="btn btn-secondary md-4 my-sm-3" type="submit">Buscar</button>
+    </form>
+    <div></div>
+    <p></p>
         <!--buscador-->
         <div v-for="produ of buscarProducto"  class="card">
             <div class="row">
