--- a/crash-games-main/index.html
+++ b/crash-games-main/index.html
@@ -78,6 +78,8 @@
    <h3>Chequea Nuestros Productos</h3>
    <br>
    <main id="app">
+       <button class="btn btn-dark" v-on:click="cargar();" type="button">Cargar nuevo producto</button>
+    <br>   
     <br>
     <form class="row">
       <input class="form-control me-sm-2" type="search" name="buscarProducto" id="search" v-model="nombreProducto" placeholder="buscar..." >
