--- a/crash-games-main/index.html
+++ b/crash-games-main/index.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/main.css">
     <title>Parcial</title>
 </head>
 <body>
@@ -65,7 +66,7 @@
               <img src="https://cdn-icons-png.flaticon.com/512/6874/6874127.png" alt="arrow" style="max-width: 45px;"> 
             </button>
           </h2>
-          <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample" style="">
+          <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
             <div class="accordion-body">
               <p><a href="#">Orden alfabético: A-Z</a></p>
               <p><a href="#">Orden Precio: Mayor-Menor</a></p>
@@ -78,18 +79,34 @@
    <h3>Chequea Nuestros Productos</h3>
    <br>
    <main id="app">
-       <button class="btn btn-dark" v-on:click="cargar();" type="button">Cargar nuevo producto</button>
-    <br>   
+    <form class="row">
+      <h3>Agrega un producto</h3>
+      <input class="form-control me-sm-2" type="number" id="search" placeholder="ingrese el id" v-model="legajoP">
+      <input class="form-control me-sm-2" type="text" id="search" placeholder="ingrese el nombre" v-model="nomP">
+      <input class="form-control me-sm-2" type="number" id="search" placeholder="ingrese un numero" v-model="precioP">
+      <button class="btn btn-secondary md-4 my-sm-3" type="submit" v-on:click="agregar()">Agregar</button>
+    </form>
     <br>
+    <!-- ESTO ES EL BUSCADOR -->
     <form class="row">
       <input class="form-control me-sm-2" type="search" name="buscarProducto" id="search" v-model="nombreProducto" placeholder="buscar..." >
       <button class="btn btn-secondary md-4 my-sm-3" type="submit">Buscar</button>
+    </form>
+    <!-- ESTO ES EL SELECION -->
+    <form class="row">
+      <select class="form-select" aria-label="Default select example">
+        <option selected>Open this select menu</option>
+        <option value="1" v-model="name">Mayor precio</option>
+        <option value="2" v-model="name">Menor precio</option>
+        <option value="3" v-model="name">Alfabeticamente</option>
+      </select>
     </form>
     <div></div>
     <p></p>
         <!--buscador-->
         <div v-for="produ of buscarProducto"  class="card">
             <div class="row">
+                <!-- <h3>Agregar</h3> -->
                 <i v-on:click="darLike(produ)" v-bind:class="{'like': produ.like==true}" class="fa-solid fa-lg fa-heart "></i>
             </div>
             <!--V-TEXT NOMBRE PELICULA-->
@@ -99,6 +116,16 @@
             <!--V-TEXT ANIO PELICULA-->
             $<p v-text='produ.precio'></p>
         </div>
+<!-- PARA VER EL CARRITO -->
+<div class="historial">
+  <h2>Carrito de compras</h2>
+  <ul>
+    <li v-for="g of mostrarProducto">
+      <p v-text="g.nombre"></p>
+    </li>
+  </ul>
+  <p v-text="productosTotales"></p>
+</div>
       </main>
 
       <br>
@@ -128,6 +155,7 @@
     <!-- <script src="js/vue.js"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
     <script src="app.js"></script>
+    <script src="appWeb.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
 </body>
